# water-jug-riddle

./: .flake8  Dockerfile  README.md  pyproject.toml
app/: __init__.py
app/main/: __init__.py  routes.py
app/templates/: index.html
tests/: conftest.py  test_main.py
