[tool.poetry]
name = "water-jug-riddle"
version = "0.1.0"
description = ""
authors = ["Federico Aviles <federicoaviles3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
isort = "^5.12.0"
black = "^23.7.0"
pytest = "^7.4.0"
coverage = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
known_flask="flask"
sections=["FUTURE","STDLIB","FLASK","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]
default_section="THIRDPARTY"
import_heading_stdlib="stdlib"
import_heading_flask="flask"
import_heading_thirdparty="deps"
import_heading_firstparty="local"
lines_after_imports=2
indent='    '
multi_line_output=3
include_trailing_comma=true

[tool.flake8]
max-line-length = 88
ignore = ["E203", "E501", "W503"]
